--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/tsconfig.json
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/tsconfig.json
@@ -25,16 +25,16 @@
 
     /* Modules */
     "module": "ESNext" /* Specify what module code is generated. */,
-    // "rootDir": "./",                                  /* Specify the root folder within your source files. */
+    "rootDir": "./source",                                  /* Specify the root folder within your source files. */
     "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
     "baseUrl": "./" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
-      "/_content/Blazor-State/js/BlazorState.js": [
-        "./source/types/BlazorState.d.ts"
+      "/_content/TimeWarp.State/js/TimeWarpState.js": [
+        "./source/types/TimeWarpState.d.ts"
       ]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
-    // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
+    "typeRoots": ["./types"],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "resolveJsonModule": true,                        /* Enable importing .json files */
