--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/tsconfig.json
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
-
     /* Projects */
     // "incremental": true,                              /* Enable incremental compilation */
     // "composite": true,                                /* Enable constraints that allow a TypeScript project to be used with project references. */
@@ -28,11 +27,7 @@
     "rootDir": "./source",                                  /* Specify the root folder within your source files. */
     "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
     "baseUrl": "./" /* Specify the base directory to resolve non-relative module names. */,
-    "paths": {
-      "/_content/TimeWarp.State/js/TimeWarpState.js": [
-        "./source/types/TimeWarpState.d.ts"
-      ]
-    } /* Specify a set of entries that re-map imports to additional lookup locations. */,
+    // "paths": { } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     "typeRoots": ["./types"],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
