Add Passwordless configuration

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/appsettings.json
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/appsettings.json
@@ -26,5 +26,9 @@
   "SampleOptions": {
     "SampleOption": "SampleValue"
   },
-
+  "Passwordless": {
+    "ApiKey": "timewarp:public:b00cdd667db547de90debf2808340c42",
+    "ApiSecret": "Overriden with User Secrets",
+    "ApiUrl": "https://v4.passwordless.dev"
+  }
 }
