--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
@@ -11,7 +11,7 @@
     <!-- Uncomment the following line if you want to Mock B2C.
      Note you will need to run all Mock Data if you do
      because the token won't work on the real API -->
-<!--    <DefineConstants>$(DefineConstants);MOCK_AUTHENTICATION</DefineConstants>-->
+    <DefineConstants>$(DefineConstants);MOCK_AUTHENTICATION</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
@@ -37,6 +37,7 @@
     <PackageReference Include="Morris.Blazor.ControlFlow"/>
     <PackageReference Include="Morris.Blazor.FluentValidation"/>
     <PackageReference Include="Morris.Moxy" PrivateAssets="all" GeneratePathProperty="true"/>
+    <PackageReference Include="Passwordless" />
     <PackageReference Include="System.Net.Http.Json" PrivateAssets="all"/>
     <PackageReference Include="TimeWarp.State" />
     <PackageReference Include="TimeWarp.State.Plus"/>
@@ -47,7 +48,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <AdditionalFiles Include="**/*.md" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <!--#if(api)-->
+    <ProjectReference Include="..\..\..\..\..\..\timewarp-source-generators\source\TimeWarp.SourceGenerators\TimeWarp.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\..\..\Analyzers\TimeWarp.Architecture.Analyzers\TimeWarp.Architecture.Analyzers.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"  />
     <ProjectReference Include="..\..\Api\Api.Contracts\Api.Contracts.csproj"/>
     <!--#endif-->
@@ -78,6 +84,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <AdditionalFiles Include="Features\Account\Pages\LoginPage\RegisterPasskey.razor" />
     <AdditionalFiles Include="Features\Base\StateAccessMixin.mixin"/>
     <AdditionalFiles Include="Mixins\Page.mixin"/>
   </ItemGroup>
