Starting to incorporate Passwordless.

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/appsettings.json
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/appsettings.json
@@ -29,6 +29,9 @@
   "Passwordless": {
     "ApiKey": "timewarp:public:b00cdd667db547de90debf2808340c42",
     "ApiSecret": "Overriden with User Secrets",
-    "ApiUrl": "https://v4.passwordless.dev"
+    "ApiUrl": "https://v4.passwordless.dev",
+    "Register": {
+      "Discoverable": true
+    }
   }
 }
