--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/wwwroot/appsettings.json
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/wwwroot/appsettings.json
@@ -14,5 +14,12 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "PasswordlessOptions": {
+    "ApiKey": "timewarp:public:b00cdd667db547de90debf2808340c42",
+    "ApiUrl": "https://v4.passwordless.dev",
+    "Register": {
+      "Discoverable": true
+    }
   }
 }
