--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Domain/Web.Domain.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Domain/Web.Domain.csproj
@@ -13,4 +13,9 @@
     <ProjectReference Include="..\..\..\Common\Common.Domain\Common.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+    <Folder Include="ValueObjects\" />
+  </ItemGroup>
+
 </Project>
