Use the real API for now

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
@@ -13,7 +13,7 @@
      because the token won't work on the real API -->
     <DefineConstants>$(DefineConstants);MOCK_AUTHENTICATION;</DefineConstants>
     <!-- Use Mock web API -->
-    <DefineConstants>$(DefineConstants);MOCK_WEB_API;</DefineConstants>
+<!--    <DefineConstants>$(DefineConstants);MOCK_WEB_API;</DefineConstants>-->
   </PropertyGroup>
 
   <ItemGroup>
