--- a/TimeWarp.Architecture/Directory.Packages.props
+++ b/TimeWarp.Architecture/Directory.Packages.props
@@ -3,6 +3,7 @@
     <PackageVersion Include="Ardalis.GuardClauses" Version="4.6.0" />
     <PackageVersion Include="Asp.Versioning.Http" Version="7.0.0" />
     <PackageVersion Include="Asp.Versioning.Mvc" Version="7.0.0" />
+    <PackageVersion Include="Aspirant.Hosting.Yarp" Version="0.0.4" />
     <PackageVersion Include="Aspire.Hosting" Version="8.2.0" />
     <PackageVersion Include="Aspire.Hosting.AppHost" Version="8.2.0" />
     <PackageVersion Include="Aspire.Hosting.Azure.CosmosDB" Version="8.2.0" />
