Expose some properties needed by analyzers

--- a/TimeWarp.Architecture/Directory.Build.props
+++ b/TimeWarp.Architecture/Directory.Build.props
@@ -41,6 +41,13 @@
     </ItemGroup>
   </Target>
 
+
+  <ItemGroup>
+    <!--  https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/style-rules/ide0130-->
+    <CompilerVisibleProperty Include="RootNamespace" />
+    <CompilerVisibleProperty Include="ProjectDir" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="GlobalUsingsAnalyzer">
       <PrivateAssets>all</PrivateAssets>
