--- a/TimeWarp.Architecture/Source/Analyzers/TimeWarp.Architecture.Analyzers/TimeWarp.Architecture.Analyzers.csproj
+++ b/TimeWarp.Architecture/Source/Analyzers/TimeWarp.Architecture.Analyzers/TimeWarp.Architecture.Analyzers.csproj
@@ -14,6 +14,6 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.Common" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" />
   </ItemGroup>
 </Project>
