--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
@@ -85,8 +85,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <AdditionalFiles Include="Features\Account\Pages\LoginPage\RegisterPasskey.razor" />
-    <AdditionalFiles Include="Features\Authentication\AuthenticationStateListener.razor" />
     <AdditionalFiles Include="Features\Base\StateAccessMixin.mixin"/>
     <AdditionalFiles Include="Mixins\Page.mixin"/>
   </ItemGroup>
@@ -114,7 +112,7 @@
 
   <Target Name="CreateDummyFluentUICSS" BeforeTargets="Build">
     <ItemGroup>
-      <DummyCSSFile Include="$(ProjectDir)obj\css\_content\Microsoft.FluentUI.AspNetCore.Components\Microsoft.FluentUI.AspNetCore.Components.bundle.scp.css" />
+      <DummyCSSFile Include="$(ProjectDir)obj\css\_content\Microsoft.FluentUI.AspNetCore.Components\Microsoft.FluentUI.AspNetCore.Components.dibzmir27r.bundle.scp.css" />
     </ItemGroup>
     <MakeDir Directories="$(ProjectDir)obj\css\_content\Microsoft.FluentUI.AspNetCore.Components" />
     <WriteLinesToFile File="@(DummyCSSFile)" Lines="/* Dummy file to satisfy build requirement */" Overwrite="true" />
@@ -122,7 +120,7 @@
 
   <Target Name="CreateDummyQuickGridCSS" BeforeTargets="Build">
     <ItemGroup>
-      <DummyQuickGridCSSFile Include="$(ProjectDir)obj\css\_content\Microsoft.AspNetCore.Components.QuickGrid\Microsoft.AspNetCore.Components.QuickGrid.bundle.scp.css" />
+      <DummyQuickGridCSSFile Include="$(ProjectDir)obj\css\_content\Microsoft.AspNetCore.Components.QuickGrid\Microsoft.AspNetCore.Components.QuickGrid.25o87uqmvr.bundle.scp.css" />
     </ItemGroup>
     <MakeDir Directories="$(ProjectDir)obj\css\_content\Microsoft.AspNetCore.Components.QuickGrid" />
     <WriteLinesToFile File="@(DummyQuickGridCSSFile)" Lines="/* Dummy file to satisfy build requirement */" Overwrite="true" />
