add direct reference to Microsoft.CodeAnalysis.CSharp.Workspaces to fix Nuget  error NU1701

--- a/TimeWarp.Architecture/Tests/Analyzers/TimeWarp.Architecture.Analyzers.Tests/TimeWarp.Architecture.Analyzers.Tests.csproj
+++ b/TimeWarp.Architecture/Tests/Analyzers/TimeWarp.Architecture.Analyzers.Tests/TimeWarp.Architecture.Analyzers.Tests.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Fixie.TestAdapter" />
     <PackageReference Include="FluentAssertions" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
     <PackageReference Include="TimeWarp.Fixie" />
   </ItemGroup>
 
