Add FastEndpoints PackageReference

--- a/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Contracts/Api.Contracts.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Contracts/Api.Contracts.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FastEndpoints" />
     <PackageReference Include="FluentValidation" />
     <PackageReference Include="JetBrains.Annotations" />
     <PackageReference Include="MediatR" />
