--- a/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Server/Api.Server.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Server/Api.Server.csproj
@@ -13,10 +13,12 @@
 
   <ItemGroup Label="Core">
     <PackageReference Include="FastEndpoints" />
+    <PackageReference Include="FastEndpoints.Swagger" />
     <PackageReference Include="FluentValidation.AspNetCore" />
     <PackageReference Include="JetBrains.Annotations" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
     <PackageReference Include="Oakton" />
+    <PackageReference Include="Scalar.AspNetCore" />
   </ItemGroup>
 
   <ItemGroup>
