Task: 004 = Complete FastEndpoints migration and validation handling

--- a/TimeWarp.Architecture/Source/Common/Common.Server/Common.Server.csproj
+++ b/TimeWarp.Architecture/Source/Common/Common.Server/Common.Server.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" />
+    <PackageReference Include="FastEndpoints" />
     <PackageReference Include="MediatR" />
     <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" />
