--- a/TimeWarp.Architecture/Source/Common/Common.Contracts/Common.Contracts.csproj
+++ b/TimeWarp.Architecture/Source/Common/Common.Contracts/Common.Contracts.csproj
@@ -5,6 +5,7 @@
     <PackageReference Include="FluentValidation" />
     <PackageReference Include="JetBrains.Annotations" />
     <PackageReference Include="libphonenumber-csharp" />
+    <PackageReference Include="MediatR" />
     <PackageReference Include="Microsoft.Extensions.Http" />
     <PackageReference Include="Microsoft.Extensions.Options" />
     <PackageReference Include="OneOf" />
