--- a/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Server/Properties/launchSettings.json
+++ b/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Server/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Api.Server": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
