Task: 007 = Progress - Add AdditionalFiles to expose Api.Contracts to source generator

--- a/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Server/Api.Server.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Server/Api.Server.csproj
@@ -29,6 +29,9 @@
     <ProjectReference Include="..\..\..\Analyzers\TimeWarp.Architecture.SourceGenerator\TimeWarp.Architecture.SourceGenerator.csproj"
                       OutputItemType="Analyzer"
                       ReferenceOutputAssembly="false"/>
+
+    <!-- Add Api.Contracts source files for the source generator -->
+    <AdditionalFiles Include="..\Api.Contracts\**\*.cs" />
   </ItemGroup>
 
   <ItemGroup>
