--- a/TimeWarp.Architecture/Source/Analyzers/TimeWarp.Architecture.SourceGenerator/TimeWarp.Architecture.SourceGenerator.csproj
+++ b/TimeWarp.Architecture/Source/Analyzers/TimeWarp.Architecture.SourceGenerator/TimeWarp.Architecture.SourceGenerator.csproj
@@ -1,16 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
     <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
-    <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
     <IsRoslynComponent>true</IsRoslynComponent>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" PrivateAssets="all" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TimeWarp.Architecture.Attributes\TimeWarp.Architecture.Attributes.csproj" />
+  </ItemGroup>
+
 </Project>
