Add ProjectReference to TimeWarp.Architecture.Attributes

--- a/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Contracts/Api.Contracts.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Contracts/Api.Contracts.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Common.Contracts\Common.Contracts.csproj" />
+    <ProjectReference Include="..\..\..\Analyzers\TimeWarp.Architecture.Attributes\TimeWarp.Architecture.Attributes.csproj" />
   </ItemGroup>
 
   <ItemGroup>
