--- a/TimeWarp.Architecture/Tests/Analyzers/TimeWarp.Architecture.Analyzers.Tests/TimeWarp.Architecture.Analyzers.Tests.csproj
+++ b/TimeWarp.Architecture/Tests/Analyzers/TimeWarp.Architecture.Analyzers.Tests/TimeWarp.Architecture.Analyzers.Tests.csproj
@@ -1,10 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Fixie.TestAdapter" />
     <PackageReference Include="FluentAssertions" />
@@ -12,9 +10,7 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
     <PackageReference Include="TimeWarp.Fixie" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\Source\Analyzers\TimeWarp.Architecture.Analyzers\TimeWarp.Architecture.Analyzers.csproj" />
   </ItemGroup>
-
 </Project>
