--- a/TimeWarp.Architecture/Source/Common/Common.Application/Common.Application.csproj
+++ b/TimeWarp.Architecture/Source/Common/Common.Application/Common.Application.csproj
@@ -1,9 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\Common.Contracts\Common.Contracts.csproj" />
     <ProjectReference Include="..\Common.Domain\Common.Domain.csproj" />
     <ProjectReference Include="..\..\Libraries\TimeWarp.Modules\TimeWarp.Modules.csproj" />
   </ItemGroup>
-
 </Project>
