--- a/TimeWarp.Architecture/Source/Common/Common.Domain/Common.Domain.csproj
+++ b/TimeWarp.Architecture/Source/Common/Common.Domain/Common.Domain.csproj
@@ -1,7 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <PackageReference Include="MediatR" />
   </ItemGroup>
-
 </Project>
