--- a/TimeWarp.Architecture/Source/Common/Common.Infrastructure/Common.Infrastructure.csproj
+++ b/TimeWarp.Architecture/Source/Common/Common.Infrastructure/Common.Infrastructure.csproj
@@ -1,11 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <PackageReference Include="Timewarp.OptionsValidation" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Common.Application\Common.Application.csproj" />
   </ItemGroup>
-
 </Project>
