--- a/TimeWarp.Architecture/Source/Common/Common.Server/Common.Server.csproj
+++ b/TimeWarp.Architecture/Source/Common/Common.Server/Common.Server.csproj
@@ -1,5 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <PackageReference Include="Azure.Identity" />
     <PackageReference Include="FastEndpoints" />
@@ -15,9 +14,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Common.Infrastructure\Common.Infrastructure.csproj" />
   </ItemGroup>
-
 </Project>
