--- a/TimeWarp.Architecture/Source/Libraries/TimeWarp.MediatR/TimeWarp.MediatR.csproj
+++ b/TimeWarp.Architecture/Source/Libraries/TimeWarp.MediatR/TimeWarp.MediatR.csproj
@@ -1,15 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="FluentValidation" />
     <PackageReference Include="MediatR" />
     <PackageReference Include="OneOf" />
   </ItemGroup>
-
 </Project>
