--- a/TimeWarp.Architecture/Tests/ContainerApps/Api/Api.Server.Integration.Tests/Api.Server.Integration.Tests.csproj
+++ b/TimeWarp.Architecture/Tests/ContainerApps/Api/Api.Server.Integration.Tests/Api.Server.Integration.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.Testing" />
     <PackageReference Include="AutoFixture" />
@@ -8,7 +8,6 @@
     <PackageReference Include="FluentAssertions" />
     <PackageReference Include="TimeWarp.Fixie" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Source\ContainerApps\Api\Api.Contracts\Api.Contracts.csproj" />
     <ProjectReference Include="..\..\..\..\Source\ContainerApps\Api\Api.Server\Api.Server.csproj" />
@@ -16,17 +15,14 @@
     <ProjectReference Include="..\..\..\TimeWarp.Testing\Testing.Common.csproj" />
     <!--<ProjectReference Include="C:\git\github\TimeWarpEngineering\timewarp-fixie\source\TimeWarp.Fixie\TimeWarp.Fixie.csproj" />-->
   </ItemGroup>
-
   <ItemGroup>
     <Folder Include="Configuration\" />
   </ItemGroup>
-
   <ItemGroup>
     <AdditionalFiles Include="..\..\DependencyValidation\DependencyValidation1.layerdiagram" Link="DependencyValidation1.layerdiagram">
       <Visible>False</Visible>
     </AdditionalFiles>
   </ItemGroup>
-
   <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
