--- a/TimeWarp.Architecture/Tests/Web.Server.Integration.Tests/Web.Server.Integration.Tests.csproj
+++ b/TimeWarp.Architecture/Tests/Web.Server.Integration.Tests/Web.Server.Integration.Tests.csproj
@@ -1,5 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <PackageReference Include="AutoFixture" />
     <PackageReference Include="AutoFixture.AutoFakeItEasy" />
@@ -7,13 +6,11 @@
     <PackageReference Include="Fixie.TestAdapter" />
     <PackageReference Include="FluentAssertions" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Contracts\Web.Contracts.csproj" />
     <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Server\Web.Server.csproj" />
     <ProjectReference Include="..\TimeWarp.Testing\Testing.Common.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
