I can at least see the Attribute on the class in this.

--- a/TimeWarp.Architecture/Source/GenTester/GenTester.csproj
+++ b/TimeWarp.Architecture/Source/GenTester/GenTester.csproj
@@ -8,9 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\timewarp-source-generators\source\TimeWarp.SourceGenerators\TimeWarp.SourceGenerators.csproj"
-                      OutputItemType="Analyzer"
-                      ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\Analyzers\TimeWarp.Architecture.SourceGenerator\TimeWarp.Architecture.SourceGenerator.csproj" />
   </ItemGroup>
 
 </Project>
