--- a/TimeWarp.Architecture/Tests/Libraries/TimeWarp.Automation.Tests/TimeWarp.Automation.Tests.csproj
+++ b/TimeWarp.Architecture/Tests/Libraries/TimeWarp.Automation.Tests/TimeWarp.Automation.Tests.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Shouldly" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Source\Libraries\TimeWarp.Automation\TimeWarp.Automation.csproj" />
+  </ItemGroup>
+
 </Project>
