Task: 013 = Add reference to Contracts from TimeWarp.Automation

--- a/TimeWarp.Architecture/Source/Libraries/TimeWarp.Automation/TimeWarp.Automation.csproj
+++ b/TimeWarp.Architecture/Source/Libraries/TimeWarp.Automation/TimeWarp.Automation.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\TimeWarp.Automation.Contracts\TimeWarp.Automation.Contracts.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
