Task: 014 = Implement RunApplication with Handler and Test

--- a/TimeWarp.Architecture/Source/Libraries/TimeWarp.Automation.Contracts/TimeWarp.Automation.Contracts.csproj
+++ b/TimeWarp.Architecture/Source/Libraries/TimeWarp.Automation.Contracts/TimeWarp.Automation.Contracts.csproj
@@ -1,9 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <Description>TimeWarp Automation Contracts Library</Description>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation"/>
+    <PackageReference Include="MediatR"/>
+    <PackageReference Include="OneOf"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\Common.Contracts\Common.Contracts.csproj"/>
+  </ItemGroup>
 
 </Project>
