--- a/TimeWarp.Architecture/Source/Libraries/TimeWarp.Automation/TimeWarp.Automation.csproj
+++ b/TimeWarp.Architecture/Source/Libraries/TimeWarp.Automation/TimeWarp.Automation.csproj
@@ -1,13 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <ItemGroup>
-    <ProjectReference Include="..\TimeWarp.Automation.Contracts\TimeWarp.Automation.Contracts.csproj" />
-  </ItemGroup>
-
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <Description>TimeWarp Automation Library</Description>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation"/>
+    <PackageReference Include="MediatR"/>
+    <PackageReference Include="OneOf"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TimeWarp.Automation.Contracts\TimeWarp.Automation.Contracts.csproj"/>
+  </ItemGroup>
 
 </Project>
