--- a/TimeWarp.Architecture/Tests/Libraries/TimeWarp.Automation.Tests/TimeWarp.Automation.Tests.csproj
+++ b/TimeWarp.Architecture/Tests/Libraries/TimeWarp.Automation.Tests/TimeWarp.Automation.Tests.csproj
@@ -5,11 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions"/>
     <PackageReference Include="FluentValidation"/>
     <PackageReference Include="MediatR"/>
     <PackageReference Include="OneOf"/>
     <PackageReference Include="Shouldly"/>
+    <PackageReference Include="Fixie.TestAdapter"/>
+    <PackageReference Include="TimeWarp.Fixie"/>
   </ItemGroup>
 
   <ItemGroup>
