--- a/TimeWarp.Architecture/Source/ContainerApps/Aspire/Aspire.AppHost/Aspire.AppHost.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Aspire/Aspire.AppHost/Aspire.AppHost.csproj
@@ -10,7 +10,9 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" />
+    <!--#if (cosmosdb) -->
     <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" />
+    <!--#endif -->
     <!--#if (yarp) -->
     <PackageReference Include="Aspirant.Hosting.Yarp" />
     <!--#endif -->
