We want everything enabled by default when working on the project the templates will turn off stuff.

--- a/TimeWarp.Architecture/Source/Directory.Build.props
+++ b/TimeWarp.Architecture/Source/Directory.Build.props
@@ -3,5 +3,7 @@
   <PropertyGroup>
     <RootNamespace>TimeWarp.Architecture</RootNamespace>
     <Nullable>enable</Nullable>
+    <!-- Define all template features as enabled by default -->
+    <DefineConstants>$(DefineConstants);cosmosdb;api;grpc;web;yarp</DefineConstants>
   </PropertyGroup>
 </Project>
